OpenNLP-855: Fine-tunes test classes